--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ webtest==2.0.7
 django-db-pool==0.0.10
 django-secure==0.1.2
 django-auth-ldap==1.1.8
+django-sslserver
 bleach==1.4
 boto==2.27.0
 django-ses==0.6.0
